# OraTAPI

./: .bumpversion.cfg  .gitignore  AGENTS.md  LICENSE  MANIFEST.in  ORACLE_INTERNAL_LICENSE.txt  README.md  deploy-migration-plan.md  gen_asv.bat  out.txt  pyprojec.toml.bu  pyproject (copy).toml  pyproject.toml  requirements.txt  setup.ps1  setup.py  setup.sh
.codex/skills/oratapi-readme-audit/: SKILL.md
.codex/skills/release-notes/: SKILL.md
.codex/skills/release-package/: SKILL.md
config/: OraTAPI.ini  OraTAPI.ini.sample
controller/: conn_mgr.py  main_controller.py  ora_tapi.py
lib/: app_utils.py  config_manager.py  file_system_utils.py
model/: api.py  api_generator.py  bdds_config.py  config_manager.py  db_objects.py  framework_errors.py
resources/config/: OraTAPI.csv  OraTAPI.ini  OraTAPI.ini.sample  OraTAPI.ini.ut.sample  pi_columns.csv
resources/config/samples/: OraTAPI.ini.sample  OraTAPI.ini.ut.sample
resources/templates/column_expressions/updates/: row_version.tpt
resources/templates/misc/view/samples/: view.llogger.sample
resources/templates/ut_packages/body/: after.tpt  api_test.tpt  before.tpt  constraint_test.tpt  package_header.tpt
resources/templates/ut_packages/body/samples/: after.common.sample  api_test.common.sample  before.common.sample  constraint_test.common.sample  package_footer.basic.sample  package_footer.liquibase.sample  package_header.basic.sample  package_header.liquibase.sample  test_constraint.common.sample
resources/templates/ut_packages/spec/: after.tpt  api_test.tpt  package_footer.tpt  package_header.tpt
resources/templates/ut_packages/spec/samples/: api_test.common.sample  before.common.sample  constraint_test.common.sample  package_header.basic.sample  package_header.llogger.sample  package_header.logger.sample
src/: OraTAPI.csv  setup.sh
src/controller/: __init__.py  __main__.py  conn_mgr.py  migrate_config.py  ora_tapi.py  profile_mgr.py  quick_config (copy).py  quick_config.py  update_ora_tapi.py
src/lib/: app_utils.py  config_manager.py  config_mgr.py  connection_mgr.py  connecttion_mgr.py  framework_errors.py  fsutils.py  profile_manager.py  session_manager.py  user_security.py
src/model/: api_generator.py  db_objects.py  ora_tapi_csv.py  session_manager.py  session_manager.py.old  tapi_generator.py  user_security.py  utplsql_generator.py
src/ora_tapi_package_data/: __init__.py
src/ora_tapi_package_data/resources/config/: OraTAPI.csv  OraTAPI.ini
src/ora_tapi_package_data/resources/config/samples/: OraTAPI.ini.sample
src/ora_tapi_package_data/resources/templates/misc/trigger/samples/: table_name_biu.llogger.sample
src/ora_tapi_package_data/resources/templates/ut_packages/body/samples/: api_test.common.sample
src/ora_tapi_package_data/resources/templates/ut_packages/spec/samples/: api_test.common.sample  package_footer.logger.sample  package_header.basic.sample  package_header.llogger.sample
src/oratapi/: __init__.py  __main__.py
src/oratapi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/oratapi/controller/: __init__.py  __main__.py  conn_mgr.py  migrate_config.py  ora_tapi.py  profile_mgr.py  quick_config.py  update_ora_tapi.py
src/oratapi/lib/: app_utils.py  config_mgr.py  connection_mgr.py  fsutils.py  profile_manager.py  session_manager.py  user_security.py
src/oratapi/model/: db_objects.py  framework_errors.py  ora_tapi_csv.py  pi_csv.py  tapi_generator.py  utplsql_generator.py
src/oratapi/ora_tapi_package_data/resources/config/: OraTAPI.ini  OraTAPI.ini.sample  OraTAPI.ini.ut.sample
src/oratapi/ora_tapi_package_data/resources/templates/ut_packages/body/: package_footer.tpt
src/oratapi/ora_tapi_package_data/resources/templates/ut_packages/body/samples/: package_footer.llogger.sample  package_header.llogger.sample
src/oratapi/ora_tapi_package_data/resources/templates/ut_packages/spec/: package_header.tpt
src/oratapi/ora_tapi_package_data/resources/templates/ut_packages/spec/samples/: package_footer.liquibase.sample  package_footer.llogger.sample
src/oratapi/view/: console_display.py  interactions.py
src/resources/config/: OraTAPI.ini.sample
src/resources/templates/column_expressions/updates/: created_on.tpt.sample
src/view/: console_display.py  interactions.py  ora_tapi_csv.py
staging/trigger/: countries_biu.sql  departments_biu.sql  employees_biu.sql  job_history_biu.sql  jobs_biu.sql  locations_biu.sql  regions_biu.sql  table_name_biu.sql
staging/view/: countries_v.sql  departments_v.sql  employees_v.sql  job_history_v.sql  jobs_v.sql  locations_v.sql  regions_v.sql
templates/misc/trigger/: table_name_biu.tpt.sample
templates/misc/view/: view.tpt  view.tpt.sample
tests/: test_app_utils.py  test_fsutils.py  test_package_metadata.py  test_profile_manager.py  test_quick_config.py  test_tapi_generator.py  test_update_ora_tapi.py  test_user_security.py  test_wallet_resolution.py
utils/: build-e.ps1  build-e.sh  bump_major.sh  bump_minor.sh  bump_patch.sh  freeze.ps1  freeze.sh  gen_asv.sh  package.sh  publish.sh  set-env.sh  sync_requirements.py  sync_requirements.sh  test_sdist_install.sh  test_wheel_install.sh  tree.sh  utils.env
view/: console_display.py  csv_manager.py  interactions.py  ora_tapi_csv.py
