[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "OraTAPI"
version = "1.4.19"
description = "Oracle Table API Generator Application"
authors = [ {name = "Clive Bostock"} ]
dependencies = [
    "typing_extensions>=4.12.2",
    "tomli>=2.2.1",
    "setuptools-scm>=8.1.0",
    "rich>=13.9.4",
    "pyproject_hooks>=1.2.0",
    "Pygments>=2.18.0",
    "pycparser>=2.22",
    "packaging>=24.2",
    "oracledb>=2.5.0",
    "mdurl>=0.1.2",
    "markdown-it-py>=3.0.0",
    "cryptography>=43.0.3",
    "cffi>=1.17.1",
    "bump2version>=1.0.1",
    "build>=1.2.2.post1"
]

# Useful if publishing through PyPI
keywords = [
    "python",
    "oracle",
    "database",
    "plsql",
    "table api",
    "stored procedures",
    "views",
    "database triggers",
    "code generator",
    "automation"
]

# Metadata
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

# Specify the package directory
[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Repository" = "https://github.com/avalon60/OraTAPI"

# Include additional resources
[tool.setuptools.package-data]
"*" = [ "resources/config/.ini.sample",
        "resources/templates/column_expressions/.tpt.sample",
        "resources/templates/updates/.tpt.sample",
        "resources/templates/misc/trigger/.tpt.sample",
        "resources/templates/misc/view/.tpt.sample",
        "resources/templates/packages/body/.tpt.sample",
        "resources/templates/packages/procedures/.tpt.sample",
        "resources/templates/packages/spec/.tpt.sample", ]


# Declare scripts as dynamic
dynamic = ["scripts"]

# Scripts defined under `[project.scripts]`
[project.scripts]
conn_mgr = "controller.conn_mgr:main"
ora_tapi = "controller.ora_tapi:main"
quick_config = "controller.quick_config:main"

