[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "oratapi"
version = "2.8.0"
description = "Generate Oracle PL/SQL table APIs, views, triggers, and utPLSQL starter code from database metadata."
readme = "README.md"
license = "MIT"
authors = [{ name = "Clive Bostock" }]
requires-python = ">=3.10,<3.14"
keywords = [
    "python",
    "oracle",
    "database",
    "plsql",
    "table api",
    "stored procedures",
    "views",
    "database triggers",
    "code generator",
    "automation"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
    "Operating System :: OS Independent"
]
dependencies = [
    "beautifulsoup4 (==4.12.3)",
    "bs4 (==0.0.2)",
    "Markdown (==3.7)",
    "typing_extensions (>=4.12.2)",
    "tomli (>=2.2.1)",
    "rich (>=13.9.4)",
    "Pygments (>=2.18.0)",
    "pycparser (>=2.22)",
    "packaging (>=24.2)",
    "oracledb (>=2.5.0)",
    "mdurl (>=0.1.2)",
    "markdown-it-py (>=3.0.0)",
    "soupsieve (==2.6)",
    "cryptography (>=43.0.3)",
    "cffi (>=1.17.1)",
    "requests (>=2.32.3)",
    "urllib3 (==2.5.0)",
    "charset-normalizer (>=3.4.1)",
    "configobj (>=5.0.9)",
    "idna (>=3.10)"
]

[project.scripts]
conn_mgr = "oratapi.controller.conn_mgr:main"
"conn-mgr" = "oratapi.controller.conn_mgr:main"
migrate_config = "oratapi.controller.migrate_config:main"
"migrate-config" = "oratapi.controller.migrate_config:main"
ora_tapi = "oratapi.controller.ora_tapi:main"
"ora-tapi" = "oratapi.controller.ora_tapi:main"
profile_mgr = "oratapi.controller.profile_mgr:main"
"profile-mgr" = "oratapi.controller.profile_mgr:main"
quick_config = "oratapi.controller.quick_config:main"
"quick-config" = "oratapi.controller.quick_config:main"
update_ora_tapi = "oratapi.controller.update_ora_tapi:main"
"update-ora-tapi" = "oratapi.controller.update_ora_tapi:main"

[project.urls]
Homepage = "https://github.com/avalon60/OraTAPI"
Documentation = "https://github.com/avalon60/OraTAPI#readme"
Issues = "https://github.com/avalon60/OraTAPI/issues"
Repository = "https://github.com/avalon60/OraTAPI"

[tool.poetry]
packages = [
    { include = "oratapi", from = "src" }
]
include = [
    { path = "LICENSE", format = ["sdist"] },
    { path = "ORACLE_INTERNAL_LICENSE.txt", format = ["sdist"] },
    { path = "setup.sh", format = ["sdist"] },
    { path = "setup.ps1", format = ["sdist"] },
    { path = "requirements.txt", format = ["sdist"] },
    { path = "bin/*.sh", format = ["sdist"] },
    { path = "bin/*.ps1", format = ["sdist"] },
    { path = "resources/**/*", format = ["sdist"] },
    { path = "src/oratapi/ora_tapi_package_data/resources/**/*", format = ["sdist", "wheel"] }
]

[tool.poetry.group.dev.dependencies]
bump2version = ">=1.0.1"
pytest = ">=8.3.2"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
